--- a/bash/config
+++ b/bash/config
@@ -7,7 +7,8 @@ export HISTCONTROL=ignoreboth
 source ~/.bash/git-prompt.sh
 
 if [[ `uname` == 'Darwin' ]]; then
-
+  
+  export PATH="/Applications/Sublime Text.app/Contents/SharedSupport/bin:$PATH"
   export EDITOR="subl -wl1"
 	
   # Add RVM to PATH for scripting
